--- a/app/public/home.html
+++ b/app/public/home.html
@@ -6,18 +6,30 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Friend Finder - Survey</title>
 
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" 
-    crossorigin="anonymous">
-    <script src="http://code.jquery.com/jquery-2.2.4.js" integrity="sha256-iT6Q9iMJYuQiMWNd9lDyBUStIq/8PuOW33aOqmvFpqI=" crossorigin="anonymous"></script>
+    <!-- Latest compiled and minified CSS & JS -->
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+  <script src="https://code.jquery.com/jquery.js"></script>
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 </head>
 <style>
+    form {
+        display: block;
+        background-color: #F2F2F2;
+        padding: 20px;
+    }
+    label {
+        font-size: 32px;
+    }
+    .form-control {
+        width: 20%;
+    }
 </style>
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="header">Friend Finder</h1>
+            <h1 class="header text-center">Friend Finder</h1>
 
-            <a href="/survey"><button type="button" class="btn btn-danger btn-lg"><span class="glyphicon glyphicon glyphicon-list-alt"</span>Take the Survey!</button></a>
+            <a href="/survey"><button type="button" class="btn btn-danger btn-lg text-center"><span class="glyphicon glyphicon glyphicon-list-alt"></span> Take the Survey!</button></a>
         </div>
     </div>
 
