--- a/app/public/home.html
+++ b/app/public/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Friend Finder - Survey</title>
+    <title>The Amazing Friend Finder</title>
 
     <!-- Latest compiled and minified CSS & JS -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -27,9 +27,9 @@
 <body>
     <div class="container">
         <div class="jumbotron">
-            <h1 class="header text-center">Friend Finder</h1>
+            <h1 class="header text-center">The Amazing Friend Finder!</h1>
 
-            <a href="/survey"><button type="button" class="btn btn-danger btn-lg text-center"><span class="glyphicon glyphicon glyphicon-list-alt"></span> Take the Survey!</button></a>
+            <a href="/survey"><div class="text-center"><button type="button" class="btn btn-danger btn-lg text-center"><span class="glyphicon glyphicon glyphicon-list-alt"></span> Take the Survey!</button></div></a>
         </div>
     </div>
 
